--- a/MDK-ARM/Collar Radio.uvprojx
+++ b/MDK-ARM/Collar Radio.uvprojx
@@ -3079,6 +3079,11 @@
               <FileType>1</FileType>
               <FilePath>..\Application\Applications\game_tetris.c</FilePath>
             </File>
+            <File>
+              <FileName>game_dinosaur.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Application\Applications\game_dinosaur.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
